# Knowledge-graph-construction-LLM-v2

./: .env  .env.example  .gitignore  Dockerfile  PDF_FEATURE_SUMMARY.md  PDF_사용_가이드.md  README.md  REFACTORING_SUMMARY.md  TESTING_SUMMARY.md  TEST_REPORT.md  docker-compose.yml  knowledge_graph_colab.ipynb  pyproject.toml  pytest.ini  run_process_pdf.sh  test_relation_chain.py  테스트_요약.md
.devcontainer/: devcontainer.json
data/: memgraph-query-results-export-20260218.tsv  memgraph-query-results-export-20260221.tsv  memgraph-test-export.csv
data/pdfs/: README.md
scr/: main.py
src/: main.py  process_pdf.py  requirements.txt  test_import.py
src/chains/: entity_extraction_chain.py  relation_extraction_chain.py
src/database/: memgraph_client.py
src/graphs/: legal_graph.py
src/llm/: gemini_client.py  llama_client.py
src/models/: schemas.py
src/utils/: __init__.py  common_utils.py  pdf_processor.py  text_processor.py
tests/: test_colab_notebook.py  test_extraction_chains.py  test_llm_clients.py  test_memgraph_client.py  test_pdf_processor.py  test_schemas.py  test_text_processor.py  test_workflow.py
